[package]
name = "bilibili-music-gtk4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.3.1", package = "gtk4", features = ["v4_4"]}
glib = "0.14.8"
gstreamer = "0.17.4"
gstreamer-player = "0.18.0"
async-std = "1.10.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
xdg = "2.4.1"
lazy_static = "1.4.0"
