[package]
name = "bilibili-music-gtk4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4", package = "gtk4", features = ["v4_6"]}
gstreamer = "0.17.4"
gstreamer-player = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xdg = "2.4.1"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8.5"
ureq = { version = "*" }
anyhow = { version = "1.0" }
lazy_static = "1.4.0"

[dependencies.adw]
package = "libadwaita"
version  = "0.1.1"

[build-dependencies]
gtk = { version = "0.4", package = "gtk4" }
